Cambio de nombre

--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -3,7 +3,7 @@
 xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>ESFE - ASISTENCIA</title>
+    <title>ALCALDIA - SMC</title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
