--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -106,7 +106,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#base">
                   <i class="fas fa-layer-group"></i>
-                  <p>Mantenimiento</p>
+                  <p>Funciones</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="base">
@@ -149,14 +149,10 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
                      
                     <li>
                       <a th:href="@{/login}">
-                        <span class="sub-item">Volver al login</span>
+                        <span class="sub-item">Sesion</span>
                       </a>
                     </li>
-                    <li>
-                      <a th:href="@{/inventarios}">
-                        <span class="sub-item"> Inventario</span>
-                      </a>
-                    </li>
+                 
                     
                     
                   </ul>
